apps/mixi2-shinbunbun-bot/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mixi2-shinbunbun-bot
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mixi2-bot.shinbunbun.com`)
      kind: Rule
      services:
        - name: mixi2-shinbunbun-bot
          port: 80
